--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Module",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "module": "main",
+            "program": "${file}",
+            "console": "integratedTerminal",
             "justMyCode": true,
             "cwd": "${workspaceFolder}/UpdateContracts"
-        }
+        },
+        // {
+        //     "name": "Python: Module",
+        //     "type": "python",
+        //     "request": "launch",
+        //     "module": "main",
+        //     "justMyCode": true,
+        //     "cwd": "${workspaceFolder}/UpdateContracts"
+        // }
     ]
 }
