added fs server upload

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "openpyxl"
+        "openpyxl",
+        "sftpretty"
     ],
     "python.analysis.extraPaths": [
         "updateContracts",
